# expression-recognition

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
scripts/: format.sh  requirements.sh  test.sh
src/api/: main.py
src/client/: api_client.py  buffer.py  camera.py  capture.py  client_utils.py  main.py  zmq_client.py
src/common/: const.py  frame.py  models.py  utils.py
src/train/: main.py  model.py  train.py  validation.py
tests/client/: test_client_utils.py
